pushing the code for Pong Game

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="score">
-        <div class="player-score" id="player-score">0</div>
-        <div class="computer-score" id="computer-score">0</div>
+        <div class="player-score" >Player Score : <span id="player-score">0</span></div>
+        <div class="computer-score"><span id="computer-score">0</span> : Computer Score</div>
     </div>
     <div class="ball" id="ball"></div>
     <div class="paddle left" id="paddle-left"></div>
