pushing the code for the Pong Game

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="start">
+        <button id="startBtn">START</button>
+    </div>
+    <div id="overlay"></div>
     <div class="score">
         <div class="player-score" >Player Score : <span id="player-score">0</span></div>
         <div class="computer-score"><span id="computer-score">0</span> : Computer Score</div>
@@ -17,4 +21,4 @@
     <div class="paddle right" id="paddle-right"></div>
     <script src="./script.js" type="module"></script>
 </body>
-</html>
+</html> 
